syntax = "proto3";

package go.micro.srv.GetIndex;

service Example {
	rpc GetIndex(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
}

message Response {
	string errno = 1;
	string errmsg = 2;
	bytes Max = 3;
}

